fix contrast

--- a/lesson2/styles/styles.css
+++ b/lesson2/styles/styles.css
@@ -52,4 +52,7 @@ footer{
     background-color:  #1e55882d;
 
 }
+a{
+    color: black;
+}
   
